# bt_workshop

./: README.md
bt_training/: CMakeLists.txt  package.xml
bt_training/config/: ex1_tree.xml  ex2_tree.xml  ex3_tree.xml  ex4_tree.xml  ex51_tree.xml  ex52_tree.xml  tree.xml
bt_training/include/bt_training/: alarm.hpp  async_navigate_to_pose.hpp  charger_dock.hpp  charger_request_subscriber.hpp  charger_scanner.hpp  dock_to_charger.hpp  navigate_to_pose.hpp  object_scanner.hpp  publish_to_charger.hpp  reset_to_home.hpp  say_something.hpp  think_something.hpp
bt_training/src/: alarm.cpp  async_navigate_to_pose.cpp  charger_dock.cpp  charger_request_subscriber.cpp  charger_scanner.cpp  dock_to_charger.cpp  navigate_to_pose.cpp  object_scanner.cpp  publish_to_charger.cpp  reset_to_home.cpp  runner.cpp  runner_ex_1.cpp  runner_ex_2.cpp  runner_ex_3.cpp  runner_ex_4.cpp  runner_ex_51.cpp  runner_ex_52.cpp  say_something.cpp  think_something.cpp
